--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
-        Title="MainWindow" Height="414" Width="357">
-    <Grid Margin="10,10,0,-60">
+        Title="MainWindow" Height="432" Width="357">
+    <Grid Margin="10,10,0,-60" Height="450">
         <Button x:Name="_1" Content=" " Margin="4,0,226,295" Width="100" Height="100" Click="_1_Click"/>
         <Button x:Name="_2" Content=" " Margin="109,0,121,295" Width="100" Height="100" Click="_1_Click"/>
         <Button x:Name="_3" Content=" " Margin="214,0,16,295" Width="100" Height="100" Click="_1_Click"/>
@@ -16,5 +16,7 @@
         <Button x:Name="_7" Content=" " Margin="4,210,226,85" Width="100" Height="100" Click="_1_Click"/>
         <Button x:Name="_8" Content=" " Margin="109,210,121,85" Width="100" Height="100" Click="_1_Click"/>
         <Button x:Name="_9" Content=" " Margin="214,210,16,85" Width="100" Height="100" Click="_1_Click"/>
+        <Label x:Name="_1337" Content=" " HorizontalAlignment="Center" Margin="0,346,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="Start" Content="Начать" Margin="12,346,235,82" Click="Start_Click"/>
     </Grid>
 </Window>
